2008-01-03  Xan Lopez  <xan@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16654
        [GTK] Signal "navigation-requested" does not react correctly on
        return TRUE from callbacks

        * WebView/webkitwebview.cpp: use our own accumulator for signals
        returning WebKitNavigationResponse. The emission will be stopped
        when any callback returns anything but
        WEBKIT_NAVIGATION_RESPONSE_ACCEPT.


Canonical link: https://commits.webkit.org/22985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29147 268f45cc-cd09-0410-ab3c-d52691b4dbfc